# llm-multimodal-stack

./: .gitignore  Makefile  README.md  compose.yml
Image-to-Text-Server/: README.md  main.py  pyproject.toml  run.py
Image-to-Text-Server/api/endpoints/: caption.py  health.py
Image-to-Text-Server/api/models/: requests.py
Image-to-Text-Server/config/: constants.py  settings.py
Image-to-Text-Server/core/: generator.py  health.py  model.py  validation.py
Image-to-Video-Server/: Dockerfile  main.py  pyproject.toml  run.py
Image-to-Video-Server/config/: constants.py  settings.py
Image-to-Video-Server/core/: generator.py  (+3 more)
Speech-to-Text-Server/: Dockerfile  README.md  main.py  pyproject.toml  run.py
Speech-to-Text-Server/api/endpoints/: health.py  transcription.py
Speech-to-Text-Server/api/models/: requests.py
Speech-to-Text-Server/config/: constants.py  settings.py
Speech-to-Text-Server/core/: health.py  model.py  preprocessing.py  transcriber.py  validation.py
Speech-to-Text-Server/utils/: logging.py
Text-to-Image-Server/: .dockerignore  Dockerfile  main.py  pyproject.toml
Text-to-Image-Server/api/endpoints/: generation.py
Text-to-Image-Server/api/models/: requests.py
Text-to-Image-Server/config/: constants.py  settings.py
Text-to-Image-Server/core/: generator.py  health.py  model.py  validation.py
Text-to-Image-Server/utils/: logging.py
Text-to-Speech-Server/: README.md  main.py  pyproject.toml
Text-to-Speech-Server/api/endpoints/: health.py  synthesis.py  voices.py
Text-to-Speech-Server/api/models/: requests.py
Text-to-Speech-Server/config/: constants.py  settings.py
Text-to-Speech-Server/core/: health.py  model.py  synthesis.py  validation.py
Text-to-Speech-Server/orpheus_tts/: engine_class.py
Text-to-Speech-Server/utils/: logging.py
(+3 files in other folders)
