[project]
name = "speech-to-text-server"
version = "0.1.0"
description = "Speech To Text Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "numpy>=2.2.4",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
    "scipy>=1.10.1",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "transformers>=4.49.0",
    "uvicorn>=0.34.0",
]
